--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,6 +10,7 @@
 <body>
   <div class="main-content">
     {{>header}}
+    <p>The website is created by Ayush Agarwal. It is a basic NodeJS weather project which uses mapbox and weatherstack API's to get the weather data.</p>
     <img class="portrait" src="/img/2020target.PNG">
   </div>
 
